Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10520

Cannot format large MDT with ldiskfs

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.11.0
    • Lustre 2.10.0, Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      Taken from: https://github.com/intel-hpdd/intel-manager-for-lustre/issues/450

       

      Description

      When trying to create a MDT on a 29TB volume, the mke2fs command receive ^extents instead of extents which cause the command to fails.

      Repro

       

      Create an MDT on a large LUN.

       

      modprobe osd_ldiskfs: 0
      
      
      mkfs.lustre --mdt --mgsnode=172.21.61.200@tcp0 --mgsnode=172.21.61.206@tcp0 --failnode=172.21.61.200@tcp0 --reformat --index=0 --mkfsoptions=-I 512 -i 2048 -J size=2048 --backfstype=ldiskfs --fsname=BIGSI01 /dev/mapper/mpathb: 1
      
         Permanent disk data:
      Target:     BIGSI01:MDT0000
      Index:      0
      Lustre FS:  BIGSI01
      Mount type: ldiskfs
      Flags:      0x61
                    (MDT first_time update )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:  mgsnode=172.21.61.200@tcp:172.21.61.206@tcp failover.node=172.21.61.200@tcp
      
      device size = 30501008MB
      formatting backing filesystem ldiskfs on /dev/mapper/mpathb
      	target name   BIGSI01:MDT0000
      	4k blocks     7808258048
      	options       -I 512 -i 2048 -J size=2048 -q -O dirdata,uninit_bg,^extents,mmp,dir_nlink,quota,huge_file,64bit,flex_bg -E lazy_journal_init -F
      mkfs_cmd = mke2fs -j -b 4096 -L BIGSI01:MDT0000 -I 512 -i 2048 -J size=2048 -q -O dirdata,uninit_bg,^extents,mmp,dir_nlink,quota,huge_file,64bit,flex_bg -E lazy_journal_init -F /dev/mapper/mpathb 7808258048
         Found a gpt partition table in /dev/mapper/mpathb
         Extents MUST be enabled for a 64-bit filesystem.  Pass -O extents to rectify.
      
      
      mkfs.lustre FATAL: Unable to build fs /dev/mapper/mpathb (256)
      
      mkfs.lustre FATAL: mkfs failed 256
       
      
      

      If I manually try the command and remove the "^" character, the command succeeds.

            ys Yang Sheng
            joe.grund Joe Grund (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: